final polishes to home component
Live refresh on register and delete

--- a/desayunos-arkus/src/app/components/home/home.component.html
+++ b/desayunos-arkus/src/app/components/home/home.component.html
@@ -4,9 +4,12 @@
     </div>
 
     <div class="content">
-        <app-selected-day [date]="selectedDay.date" [breakfasts]="selectedDay.breakfasts" [userData]="userInfo">
+        <app-selected-day [date]="selectedDay.date" [breakfasts]="selectedDay.breakfasts" [userData]="userInfo"
+            (deleted)="ngOnInit()">
         </app-selected-day>
-        <app-calendar [userData]="userInfo" (dayClicked)="handleCalendarDayClick($event)"></app-calendar>
+        <app-calendar [year]="selectedYear" [month]="selectedMonth" [userData]="userInfo"
+            (dayClicked)="updateSelectedDay($event)" (registered)="ngOnInit()" (monthChange)="handleMonthChange($event)"
+            [monthsBreakFasts]="monthsBreakFasts"></app-calendar>
     </div>
 
     <div class="footer">
