--- a/desayunos-arkus/src/app/components/selected-day/selected-day.component.scss
+++ b/desayunos-arkus/src/app/components/selected-day/selected-day.component.scss
@@ -3,4 +3,11 @@
   grid-template-columns: auto auto;
   justify-content: center;
   gap: 0 1em;
+  font-size: 16px; // base is 16px
+}
+
+@media (max-width: 700px) {
+  .main {
+    font-size: 2.29vw;
+  }
 }
