--- a/desayunos-arkus/src/app/components/daily-list/daily-list.component.html
+++ b/desayunos-arkus/src/app/components/daily-list/daily-list.component.html
@@ -8,9 +8,11 @@
     <div class="contentWrapper">
       <div class="listItem" *ngFor="let bf of breakfasts">
         <mat-icon class="contIcon" [inline]="true">person</mat-icon>
-        <p class="pItem">{{bf.firstName + " " + bf.lastName}}</p>
-        <button mat-mini-fab color="primary" *ngIf="now <= todayLimitDate && (isAdmin || bf.userId === isUser)"
-          (click)="handleDeleteUser(bf.userId)">
+
+        <p [ngClass]="[getCssPartyMode(bf)]" class="pItem">{{bf.firstName + " " + bf.lastName}}</p>
+
+        <button class="deleteButton" mat-mini-fab color="primary"
+          *ngIf="now <= todayLimitDate && (isAdmin || bf.userId === isUser)" (click)="handleDeleteUser(bf.userId)">
           <mat-icon [inline]="true">close</mat-icon>
         </button>
       </div>
