--- a/desayunos-arkus/src/app/components/daily-list/daily-list.component.scss
+++ b/desayunos-arkus/src/app/components/daily-list/daily-list.component.scss
@@ -39,14 +39,14 @@
       gap: 0.5em;
       .listItem {
         display: grid;
-        grid-template-columns: max-content max-content auto max-content;
+        grid-template-columns: max-content max-content auto max-content max-content;
         align-items: center;
         gap: 0 0.25em;
         .pItem {
           margin: 0;
         }
-        button {
-          grid-column-end: 5;
+        .deleteButton {
+          grid-column-end: 6;
           display: flex;
           align-items: center;
           justify-content: center;
@@ -57,4 +57,9 @@
       }
     }
   }
+}
+
+.partyModeActivated {
+  font-weight: bolder;
+  color: red;
 }
