Added columns on daily-list component

--- a/desayunos-arkus/src/app/components/daily-list/daily-list.component.scss
+++ b/desayunos-arkus/src/app/components/daily-list/daily-list.component.scss
@@ -43,26 +43,30 @@
     overflow-y: auto;
     padding: 1em;
     .contentWrapper {
-      width: fit-content;
-      height: fit-content;
-      display: grid;
-      gap: 0.5em;
-      .listItem {
+      column-count: auto;
+      column-width: 420px;
+      .randomDiv {
         display: grid;
-        grid-template-columns: max-content max-content auto max-content max-content;
-        align-items: center;
-        gap: 0 0.25em;
-        .pItem {
-          margin: 0;
-        }
-        .deleteButton {
-          grid-column-end: 6;
-          display: flex;
+        gap: 0.5em;
+        height: fit-content;
+        width: fit-content;
+        .listItem {
           align-items: center;
-          justify-content: center;
-          width: 1.5em;
-          height: 1.5em;
-          font-size: 1em;
+          display: grid;
+          gap: 0 0.25em;
+          grid-template-columns: max-content max-content auto max-content max-content;
+          .pItem {
+            margin: 0;
+          }
+          .deleteButton {
+            align-items: center;
+            display: flex;
+            font-size: 1em;
+            grid-column-end: 6;
+            height: 1.5em;
+            justify-content: center;
+            width: 1.5em;
+          }
         }
       }
     }
@@ -70,6 +74,6 @@
 }
 
 .partyModeActivated {
-  font-weight: bolder;
   color: red;
+  font-weight: bolder;
 }
