--- a/desayunos-arkus/src/app/components/daily-list/daily-list.component.html
+++ b/desayunos-arkus/src/app/components/daily-list/daily-list.component.html
@@ -9,15 +9,17 @@
   </div>
   <div class="content">
     <div class="contentWrapper">
-      <div class="listItem" *ngFor="let bf of breakfasts">
-        <mat-icon class="contIcon" [inline]="true">person</mat-icon>
+      <div class="randomDiv">
+        <div class="listItem" *ngFor="let bf of breakfasts">
+          <mat-icon class="contIcon" [inline]="true">person</mat-icon>
 
-        <p [ngClass]="[getCssPartyMode(bf)]" class="pItem">{{bf.firstName + " " + bf.lastName}}</p>
+          <p [ngClass]="[getCssPartyMode(bf)]" class="pItem">{{bf.firstName + " " + bf.lastName}}</p>
 
-        <button class="deleteButton" mat-mini-fab color="primary"
-          *ngIf="now <= todayLimitDate && (isAdmin || bf.userId === isUser)" (click)="handleDeleteUser(bf.userId)">
-          <mat-icon [inline]="true">close</mat-icon>
-        </button>
+          <button class="deleteButton" mat-mini-fab color="primary"
+            *ngIf="now <= todayLimitDate && (isAdmin || bf.userId === isUser)" (click)="handleDeleteUser(bf.userId)">
+            <mat-icon [inline]="true">close</mat-icon>
+          </button>
+        </div>
       </div>
     </div>
   </div>
