--- a/desayunos-arkus/src/app/components/home/home.component.scss
+++ b/desayunos-arkus/src/app/components/home/home.component.scss
@@ -5,6 +5,7 @@
     "header header header"
     ". content ."
     "footer footer footer";
+  grid-template-columns: 1fr 22fr 1fr;
 }
 .header {
   grid-area: header;
