--- a/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
+++ b/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
@@ -1,12 +1,12 @@
 <mat-card>
     <div class="day">
-        <!-- <p>{{day}}</p> -->
-        <p>2</p>
+        <p>{{day['key']}}</p>
+        <!-- <p>2</p> -->
     </div>
-    <mat-card *ngFor="let user of data">
+    <mat-card>
         <div class="dato">
-            <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="25" id="faicon">
-            <p id="username">{{user.first_name + " " + user.last_name}}</p>
+            <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="10" id="faicon">
+            <!-- <p id="username">{{user.value}}</p> -->
         </div>
     </mat-card>
 </mat-card>
