--- a/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
+++ b/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
@@ -3,10 +3,10 @@
         <p>{{day['key']}}</p>
         <!-- <p>2</p> -->
     </div>
-    <mat-card>
-        <div class="dato">
-            <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="10" id="faicon">
-            <!-- <p id="username">{{user.value}}</p> -->
-        </div>
-    </mat-card>
+    <!-- <mat-card > -->
+    <div class="dato" *ngFor="let user of day['value']">
+        <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="10" id="faicon">
+        <p id="username">{{user}}</p>
+    </div>
+    <!-- </mat-card> -->
 </mat-card>
