--- a/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.html
+++ b/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.html
@@ -1,6 +1,6 @@
-<div [ngClass]="['card',getCssFestClass(festiveType), getCssPastDay()]">
+<div [ngClass]="['card',getCssFestClass(festiveType), getCssPastDay()]" (click)="handleClick()" >
   <div class="header">
-    <button mat-mini-fab color="'white'" (click)="handleClick()">
+    <button mat-mini-fab color="'white'">
       <p style="margin-bottom: 0px;" [(ngModel)]="dayNumber" ngDefaultControl>{{dayNumber}}</p>
     </button>
   </div>
