--- a/desayunos-arkus/src/app/components/calendar/calendar.component.scss
+++ b/desayunos-arkus/src/app/components/calendar/calendar.component.scss
@@ -1,81 +1,102 @@
 //TODO
 // Fix the space to place the arksu logo
-
-.header {
+.calendarContainer {
+  height: 100%;
+  display: grid;
+  grid-template-rows: 6vh 6vh auto 6vh;
+  grid-template-columns: 80vw 20vw;
+  .arkusLogo {
+    grid-column: 1/-1;
+    grid-row: 1/2;
+    place-self: center;
+  }
+  .headerCalendar {
+    grid-column: 1/-1;
+    grid-row: 2/3;
+    place-items: center;
     display: grid;
     grid-template-columns: repeat(3, 1fr);
-    padding-top: 10px;
-    padding-bottom: 10px;
-    // place-items: center;
-    button {
-        max-width: 10px;
-        margin: 0 2px;
-    }
-    #actualMonth {
-        // margin: 5px;
-        font-size: x-large;
-        justify-self: center;
-        align-self: center;
-    }
-    .navcontrols{
-        justify-items: start;
-    }
-}
-.calendarTable {
-    //TODO
-    // Fix the space of the footer
+  }
+  .calendarTable {
+    grid-row: 3/4;
+    grid-column: 1/2;
     display: grid;
-    height: 94.4%;
-    grid-template-rows: 50px repeat(6, 1fr) 50px;
-    row-gap: 5px;
-    .headerTable {
-        margin: 0;
-        display: grid;
-        grid-template-columns: repeat(7, 1fr);
-        place-items: center;
-        .day {
-            grid-column: span 1;
-        }
-        // .lunes {
-        //     grid-column: 1/2;
-        // }
-        // .martes {
-        //     grid-column: 2/3;
-        // }
-        // .miercoles {
-        //     grid-column: 3/4;
-        // }
-        // .jueves {
-        //     grid-column: 4/5;
-        // }
-        // .viernes {
-        //     grid-column: 5/6;
-        // }
-    }
+    min-height: 12vh;
+    grid-template-columns: repeat(5, 1fr);
+    grid-template-rows: 40px repeat(6, 1fr);
     .rowTable {
-        margin: 0;
-        display: grid;
-        grid-template-columns: repeat(7, 1fr);
-        place-items: center;
-        gap: 5px;
-        .day {
-            width: 100%;
-            grid-column: span 1;
-        }
-        // .lunes {
-        //     grid-column: 1/2;
-        // }
-        // .martes {
-        //     grid-column: 2/3;
-        // }
-        // .miercoles {
-        //     grid-column: 3/4;
-        // }
-        // .jueves {
-        //     grid-column: 4/5;
-        // }
-        // .viernes {
-        //     grid-column: 5/6;
-        // }
+      grid-column: 1/-1;
     }
+  }
+  .bigday {
+    grid-column: 2/-1;
+    grid-row: 3/4;
+  }
 }
+
+.rowTable {
+  display: grid;
+  grid-template-columns: repeat(5, 1fr);
+  .day {
+    grid-column: span 1;
+    .dayOfMonth {
+      overflow-y: auto;
+    }
+  }
+}
+
+// .headerCalendar {
+//   display: grid;
+//   grid-template-columns: repeat(3, 1fr);
+//   padding-top: 10px;
+//   padding-bottom: 10px;
+//   button {
+//     max-width: 10px;
+//     margin: 0 2px;
+//   }
+//   #actualMonth {
+//     font-size: x-large;
+//     justify-self: center;
+//     align-self: center;
+//   }
+//   .navcontrols {
+//     justify-items: start;
+//   }
+// }
+// .calendarTable {
+//   //TODO
+//   // Fix the space of the footer
+//   display: grid;
+//   grid-template-rows: 50px repeat(6, 1fr) 5vh;
+//   grid-gap: 5px;
+//   height: 100%;
+//   .headerTable {
+//     margin: 0;
+//     grid-template-columns: repeat(7, 1fr);
+//     display: grid;
+//     place-items: center;
+//     .day {
+//       grid-column: span 1;
+//     }
+//   }
+//   .rowTable {
+//     margin: 0;
+//     display: grid;
+//     grid-template-columns: repeat(7, 1fr);
+//     .day {
+//       display: grid;
+//       grid-template-rows: minmax(15px, 20px) auto;
+//       width: 100%;
+//       min-height: 5vh;
+//       max-height: 13vh;
+//       grid-column: span 1;
+//       .dayNumber {
+//         font-size: 0.9em;
+//         margin: 0;
+//       }
+//       .dayOfMonth {
+//         overflow-y: auto;
+//       }
+//     }
+//   }
+// }
