--- a/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
+++ b/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
@@ -2,12 +2,7 @@
   <!-- *ngFor="let user of day['value']"-->
   <div class="dayData" *ngFor="let user of day['value']">
     <div class="userContainer">
-      <img
-        alt="User Profile"
-        src="../../../assets/img/icons8-user-64.png"
-        height="10"
-        id="faicon"
-      />
+      <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="10" id="faicon" />
       <p class="username">{{ user.first_name }}</p>
     </div>
   </div>
