--- a/desayunos-arkus/src/app/components/calendar/calendar.component.html
+++ b/desayunos-arkus/src/app/components/calendar/calendar.component.html
@@ -22,7 +22,7 @@
       {{ days }}
     </div>
     <div class="rowTable" *ngFor="let semana of month.weeks">
-      <div class="day" *ngFor="let days of semana | keyvalue">
+      <div class="day" (click)="dayClick(days)" *ngFor="let days of semana | keyvalue">
         <p class="dayNumber">{{ days["key"] }}</p>
         <div class="dayOfMonth">
           <app-dayofmonth [dayInfo]="days"></app-dayofmonth>
@@ -31,7 +31,7 @@
     </div>
   </div>
   <div class="bigday">
-    <app-bigday></app-bigday>
+    <app-bigday [eventInfo]="dayevents"></app-bigday>
   </div>
   <div class="footer">
     <p>ESTO ES EL FOOTER</p>
