--- a/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.scss
+++ b/desayunos-arkus/src/app/components/calendar-day/calendar-day.component.scss
@@ -74,7 +74,7 @@
 }
 
 .card:hover {
-  box-shadow: 0px 0px 40px 0px lightgray;
+  box-shadow: 0px 0px 40px 0px rgb(252, 7, 7);
 }
 
 .cardPastDay {
@@ -92,7 +92,7 @@
   font-size: 20px;
 }
 
-.mexican-festive {
+/*.mexican-festive {
   animation: gradient 10s ease-in-out infinite;
   background-size: 200% 200%;
   background: linear-gradient(-45deg, #2ca813, #ffffff, #f31c15);
@@ -102,7 +102,7 @@
   animation: gradient 10s ease-in-out infinite;
   background-size: 200% 200%;
   background: linear-gradient(-45deg, #f31c15, #ffffff, #3577f1);
-}
+}*/
 
 @keyframes gradient {
   0% {
