changes to big day to use just the object that is being send from parent

--- a/desayunos-arkus/src/app/components/calendar/bigday/bigday.component.html
+++ b/desayunos-arkus/src/app/components/calendar/bigday/bigday.component.html
@@ -1,12 +1,12 @@
 <div class="bigdayContainer">
     <div class="eventandDayInfo">
-        <p>{{eventsday.day}}</p>
+        <p>{{ eventsday.day.split("-")[1] + " - " + eventsday.day.split("-")[2] }}</p>
     </div>
     <div class="events">
         <div class="data" *ngFor="let event of eventsday.events">
             <div class="userContainer">
                 <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="10" id="faicon" />
-                <p class="username">{{ event.first_name }}</p>
+                <p class="username">{{ event.first_name + " " + event.last_name }}</p>
             </div>
         </div>
     </div>
