--- a/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
+++ b/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
@@ -1,6 +1,6 @@
 <div class="dayContainer">
-  <!-- *ngFor="let user of day['value']"-->
-  <div class="dayData" *ngFor="let user of day['value']">
+  <!-- *ngFor="let user of day['value']" -->
+  <div class="dayData" *ngFor="let user of dayPreview">
     <div class="userContainer">
       <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="10" id="faicon" />
       <p class="username">{{ user.first_name }}</p>
