WIP calendario con registros, paso de meses completos

--- a/desayunos-arkus/src/app/components/calendar/bigday/bigday.component.html
+++ b/desayunos-arkus/src/app/components/calendar/bigday/bigday.component.html
@@ -1,6 +1,6 @@
 <div class="bigdayContainer">
     <div class="eventandDayInfo">
-        <p>{{ eventsday.day.split("-")[1] + " - " + eventsday.day.split("-")[2] }}</p>
+        <p>{{ dayText }}</p>
     </div>
     <div class="events">
         <div class="data" *ngFor="let event of eventsday.events">
