--- a/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
+++ b/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.html
@@ -1,12 +1,24 @@
-<div class="dayContainer">
-  <!-- *ngFor="let user of day['value']" -->
-  <div class="dayData" *ngFor="let user of dayPreview">
-    <div class="userContainer">
-      <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="10" id="faicon" />
-      <p class="username">{{ user.first_name }}</p>
+<div class="generalContainer">
+  <div class="dayContainer">
+    <div class="dayData" *ngFor="let user of dayPreview">
+      <div class="userContainer">
+        <img alt="User Profile" src="../../../assets/img/icons8-user-64.png" height="10" id="faicon" />
+        <p class="username">{{ user.first_name }}</p>
+      </div>
+    </div>
+    <div class="numberOfRegisters">
+      <p *ngIf="numberOfRegisters != 0"> + {{ numberOfRegisters }} Colaborador</p>
     </div>
   </div>
-  <div class="numberOfRegisters">
-    <p *ngIf="numberOfRegisters != 0"> + {{ numberOfRegisters }} Colaborador</p>
+  <div class="controlButtons">
+    <button type="button" title="before" mat-mini-fab color="primary" id="normalReg">
+      RN
+    </button>
+    <button type="button" title="before" mat-mini-fab color="primary" id="eventReg">
+      RE
+    </button>
+    <button type="button" title="before" mat-mini-fab color="primary" id="desReg">
+      DES
+    </button>
   </div>
 </div>
