--- a/desayunos-arkus/src/app/components/calendar/bigday/bigday.component.scss
+++ b/desayunos-arkus/src/app/components/calendar/bigday/bigday.component.scss
@@ -3,15 +3,18 @@
     grid-template-rows: 20vh calc(62vh - 5px);
     row-gap: 5px;
     margin-right: 5px;
+    border-color: #12142D;
+    background-color: rgb(255, 255, 255);
+
     .eventandDayInfo {
-        border: solid 1px rgba(0, 0, 0, 0.5);
+        border: solid 1px #12142D;
         border-radius: 5px;
         grid-row: 1/2;
         padding: 5px;
         font-size: x-large;
     }
     .events {
-        border: solid 1px rgba(0, 0, 0, 0.5);
+        border: solid 1px #12142D;
         border-radius: 5px;
         grid-row: 2/3;
         padding: 5px;
@@ -22,15 +25,20 @@
     display: flex;
     margin: 5px;
     font-size: 1.1em;
+    border-color: #12142D;
+    background-color: rgb(255, 255, 255);
+
     img {
         max-height: 2vh;
         height: 1.7vh;
         min-height: 1.5vh;
+        // background-color: rgba(255, 255, 255, 0.9);
         align-self: center;
     }
-    .username{
+    .username {
         margin: 0;
         margin-left: 5px;
+        // background-color: rgba(255, 255, 255, 0.9);
         align-items: center;
     }
 }
