--- a/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.scss
+++ b/desayunos-arkus/src/app/components/calendar/dayofmonth/dayofmonth.component.scss
@@ -1,17 +1,53 @@
 .dayContainer {
   max-height: 8vh;
-  // margin: 10px 0;
+  margin-left: 2px;
+  width: 100%;
+  display: grid;
+  grid-template-columns: auto 40px;
+  .dayData{
+    grid-column: 1/2;
+  }
+  .controlButtons{
+    grid-column: 2/3;
+    grid-row: 1/5;
+  }
+  .numberOfRegisters{
+    grid-column: 1/2;
+  }
 }
 
-.dayNumber {
-  font-size: 0.9em;
+.generalContainer{
+  display: flex;
 }
+
+.numberOfRegisters{
+  min-height: 20px;
+  p{
+    margin: 0;
+    // margin-bottom: 2px;
+  }
+}
+
+.controlButtons{
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  bottom: 100%;
+  button{
+    text-align: center;
+    margin: 1px 5px;
+    width:  25px;
+    height: 25px;
+  }
+}
+
+// .dayNumber {
+//   font-size: 0.9em;
+// }
 
 .dayData {
   display: grid;
-  overflow-y: auto;
-  // grid-template-columns: 10px auto;
-  //   height: 2vh;
+  height: 20px;
   .userContainer {
     display: grid;
     grid-template-columns: minmax(20px, 1.5vw) auto;
